# tracewake

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
crates/tracewake-core/: Cargo.toml
crates/tracewake-core/src/: checksum.rs  controller.rs  debug_capability.rs  debug_reports.rs  ids.rs  lib.rs  location.rs  need_accounting.rs  projections.rs  scheduler.rs  state.rs  time.rs  view_models.rs
crates/tracewake-core/tests/: acceptance_artifact_wording.rs  acceptance_gates.rs  acceptance_status_manifest.rs  anti_regression_guards.rs  ci_workflow_guards.rs  content_validation_locations.rs  doc_invariant_references.rs  embodied_autonomous_parity.rs  emergence_ledger.rs  event_schema_replay_gates.rs  food_source_projection.rs  generative_lock.rs  golden_scenarios.rs  hidden_truth_gates.rs  holder_known_interval_projection.rs  mutation_completion_merge.rs  negative_fixture_runner.rs  no_human_capstone.rs  replay_temporal_frontier.rs  reservation_body_exclusive_census.rs  salient_stop_actor_known.rs  scheduler_routine_derivation_authority.rs  spine_conformance.rs  world_step_coordinator.rs
crates/tracewake-tui/: Cargo.toml
crates/tracewake-tui/src/: app.rs  debug_panels.rs  input.rs  launch.rs  lib.rs  main.rs  render.rs  run.rs  transcript.rs
crates/tracewake-tui/tests/: adversarial_gates.rs  command_loop_session.rs  embodied_flow.rs  embodied_pane_buffer.rs  embodied_pane_responsive.rs  embodied_screen_dump.rs  intent_conformance.rs  parity_adversarial.rs  playable_capability_parity.rs  readme_sample_session.rs  (+3 more)
(+5187 files in other folders)
