[package]
name = "tracewake-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]

[features]
test-support = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mutants)'] }

[dev-dependencies]
tracewake-core = { path = ".", features = ["test-support"] }
