[package]
name = "tracewake-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.29.0", default-features = false }
tracewake-core = { path = "../tracewake-core" }
tracewake-content = { path = "../tracewake-content" }

[dev-dependencies]
insta = "1"
tracewake-core = { path = "../tracewake-core", features = ["test-support"] }
